Pending changes in the mainline
===============================

=> Minimum SDK version: 1.5.0 <=


Version 1.1 (2022-06-22)
========================

* Added "Resources" and "Originator" in the jobs "Content".  "Resources"
  is copied directly from the query that created the job.
* Support of dynamic linking against the system-wide Orthanc framework library


Version 1.0 (2019-03-04)
========================

* Initial release


2018-09-17
==========

* Initial publication of the source code